# mdf-pcap-converter

./: .gitignore  ANALYSE_ERREURS.md  ARCHITECTURE.md  CMakeLists.txt  ConversionManager.cpp  ConversionManager.h  README.md  build-dist.ps1  build.ps1  main.cpp  run.bat  run_gui.bat  vcpkg.json
ascii/: AsciiReader.cpp  AsciiReader.h  AsciiWriter.cpp  AsciiWriter.h
bus/: BusDetector.cpp  BusDetector.h  BusTypes.h
mdf/: MdfFrameWriter.cpp  MdfFrameWriter.h  MdfReader.cpp  MdfReaderWrapper.h
model/: Frame.h
pcap/: PcapNgReader.cpp  PcapNgReader.h  PcapNgWriter.cpp  PcapNgWriter.h  PcapReader.cpp  PcapReader.h  PcapWriter.cpp  PcapWriter.h
scripts/: check_mdf_asammdf.py  check_mf4_asammdf.py  mdf2csv_can.py
tests/: run_tests.cpp
ui/: converter_gui.py
